--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #String de conexion a la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/pruebados
+spring.datasource.url=jdbc:postgresql://localhost:5432/pruebaweb
 spring.datasource.username=postgres
 spring.datasource.password=devaluado1
 spring.jpa.show-sql=true
